[project]
name = "chess-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "zstandard>=0.23.0",
]
